--- a/src/Web/Jineo.csproj
+++ b/src/Web/Jineo.csproj
@@ -7,6 +7,7 @@
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0.0"/>
     <PackageReference Include="AutoMapper" Version="9.0.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
