--- a/src/Web/Jineo.csproj
+++ b/src/Web/Jineo.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.0.0"/>
     <PackageReference Include="AutoMapper" Version="9.0.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Localization.AspNetCore.TagHelpers" Version="0.6.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
